# django-blog

./: Dockerfile  pyproject.toml
src/webapp/: settings.py
tests/: test_django_blog.py
